--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "iamacodemonkey/rebel-flight-path",
     "description": "Flight path through Death Star defences",
-    "type": "package",
+    "type": "library",
     "require": {
         "php": ">=5.5.0",
         "guzzlehttp/guzzle": "~6.3"
